# OTIS-student

./: C++ делаем библиотеку для питона.url  questions.docx  ~$ыжимка.docx  ~WRL1847.tmp  Выжимка.docx  Личный кабинет.url  Список литературы.docx
.github/workflows/: homework1.yml  release.yml
HellowWorld/Hellow_world/: CMakeLists.txt
Qt QML AVRORA/source/: filedialog2.cpp  filedialog2.ui  filepathsedit.cpp  filepathsedit.h  filepathsource.h  filesdialog1.cpp  filesdialog3.ui  filesdialog4.h  main.cpp  meta.pro  qml.qrc
basic/lesson1 git_repositori/: readme.txt  task1.docx
basic/lesson37 conseptions2 pimpl mixin singlton selfAssignmentCheck vitualConstructor enableSharedFromThis/sources/: CMakeLists.txt  singleton.cpp  virtual_ctor.cpp
basic/lesson37 conseptions2 pimpl mixin singlton selfAssignmentCheck vitualConstructor enableSharedFromThis/sources/pimpl/details/: my_class.cpp
basic/lesson37 conseptions2 pimpl mixin singlton selfAssignmentCheck vitualConstructor enableSharedFromThis/sources/pimpl/motivation/: my_class.cpp
basic/lesson4 functions/source/types/: CMakeLists.txt
basic/lesson6 cmake/sources_webinar/: CMakeLists.txt
basic/lesson6 cmake/sources_webinar/example3/: CMakeLists.txt
basic/lesson6 cmake/sources_webinar/example3/dynamic_lib/: dynamic_lib.cpp
basic/lesson6 cmake/sources_webinar/example3/lib/: lib.cpp
basic/lesson6 cmake/sources_webinar/example3/src/: main.cpp
basic/lesson6 cmake/sources_webinar/example5/cmake/: FindsumLib.cmake
lesson1 git_repositori/: test1.txt  ~$task1.docx
lesson11 templates/: meeting_saved_chat-352182-8a7e09.txt
lesson14 move_semantic overloads/homework/vector/: CMakeLists.txt  list_check.cpp  main.cpp  mlist.cpp  mvector.cpp  vector_check.cpp
lesson16 consultation/: Ellipsis and variadic templates - Microsoft Learn.url  Variadic functions - cppreference.com.url
lesson17 google test/: Google testing framework (gtest) - Хабр.url
lesson17 google test/homework/: CMakeLists.txt
lesson17 google test/homework/vector/: CMakeLists.txt  main.cpp  mlist.cpp  mvector.cpp  vector_check.cpp  vector_check_copy.h
lesson2 VSCode/: CLion- умная кросс-платформенная IDE JetBrains для C и C++.url  Getting Started guide Documentation for Visual Studio Code.url  Introductory Videos for C++ in Visual Studio Code.url  Инструкция развертывание CMake + VSCode.docx
lesson20 algoritms lymbda/: meeting_saved_chat-345726-0072d8.txt
lesson21 работа с библиотеками вручную/: Visual C++ name mangling - Wikiversity.url  meeting_saved_chat-283624-3d7854.txt
lesson22 1пакетные менеджеры/: JFrog ConanCenter - The Central Repository for C - C++ packages.url
lesson24 Исключения. Гарантии безопасности/: C___basic_2023_03_Исключения_в_C__._Использование_и_нюансы._Гарантии_безопасности_chat-3076-3e87ff.txt
lesson25 moove semantics noexcept/: (6) CppCon 2014- Scott Meyers -Type Deduction and Why You Care- - YouTube.url  Back to Basics- Move Semantics - Nicolai Josuttis - CppCon 2021 - YouTube.url
lesson26 dunamic memory/: GMT20230704_170005_RecordingnewChat-372391-0f2b70.txt
lesson27 вопросы выравнивание variadic/: test-283624-ddc0b3.cpp  выравнивание Using the GNU Compiler Collection (GCC).url  выравниевание.rtf
lesson28 smart pointers/: std--shared_ptr - cppreference.com.url
lesson30 threads race and blocking/: std--mutex - cppreference.com.url
lesson34 threads threadLocal ParallelSTL onceFlag homework/homework withoutQT/threads/threads/: CMakeLists.txt  multi_thread.cpp  one_thread.cpp
lesson38 usefulInstruments/: C___basic_2023_03_Полезные_в_работе_инструменты_chat-3076-921a99.txt  Clang-Tidy.url  ClangFormat.url
lesson41 Карьерная консультация/: резюме.docx
lesson5 cmake_linker/: How C++ Works- Understanding Compilation - Toptal®.url
lesson5 cmake_linker/my_homework/guess_the_number/: CMakeLists.txt  main.cpp
lesson6 cmake/: meeting_saved_chat-352182-7a6579.txt
lesson8 structs and clusses/sources_webinar/: CMakeLists.txt  advanced_class.cpp  inheritance_spoiler.cpp  operator_overload.cpp  struct_stream.cpp  structures.cpp
lesson9 OOP/sources/: 1.spaceflight-error-prone.cpp  2.const.cpp  3.mutable.cpp  5.lifetime.cpp  6.inheritance.mem.cpp  CMakeLists.txt
lesson9 OOP/sources/4.friend/: BoolArray.cpp  Proxy.cpp
lessson17 google test/: googletest-advanced.md at main · google-googletest · GitHub.url  googletest-primer.md at main · google-googletest · GitHub.url  Юнит-тестирование для чайников - Хабр.url
professional/: yml_for_doxygen.txt
professional/lesson1/homework/homework/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  version.h.in
professional/lesson1/homework/homework/.github/workflows/: release.yml
professional/lesson10 C++20 concepts coroutines format_fmt ranges module/web10-228961-bcd683/: CMakeLists.txt
professional/lesson10 C++20 concepts coroutines format_fmt ranges module/web10-228961-bcd683/concepts/: main.cpp  no_concepts.cpp
professional/lesson10 C++20 concepts coroutines format_fmt ranges module/web10-228961-bcd683/coroutines/: callback_async_server.cpp  coroutine.hpp  coroutine_async_server.cpp  timers.cpp
professional/lesson10 C++20 concepts coroutines format_fmt ranges module/web10-228961-bcd683/format/: main.cpp
professional/lesson10 C++20 concepts coroutines format_fmt ranges module/web10-228961-bcd683/modules/: build.sh  main.cpp
professional/lesson10 C++20 concepts coroutines format_fmt ranges module/web10-228961-bcd683/modules/lib1/: lib1.cppm
professional/lesson10 C++20 concepts coroutines format_fmt ranges module/web10-228961-bcd683/modules/lib2/: lib2.cppm
professional/lesson10 C++20 concepts coroutines format_fmt ranges module/web10-228961-bcd683/ranges/: main.cpp
professional/lesson10 C++20 concepts coroutines format_fmt ranges module/web10-228961-bcd683/spaceship/: main.cpp
professional/lesson6 allocator traits/allocator_webinar/allocators/: CMakeLists.txt  allocator_traits.cpp  new_overload.cpp  polymorphic_allocator.cpp  polymorphism.cpp  simple_allocator.cpp
utils/: архивирование haffman.cpp
разное/: Выжимка сравнить где больше.lnk
(+510 files in other folders)
